# RSOC_BRAIN.EXE

./: .env  .env.example  .gitignore  README.md  package-lock.json  package.json
example_projects/: README.md
example_projects/fastapi_env_bug_demo/: README.md  config.py  main.py
example_projects/fastapi_env_bug_demo/routers/: __init__.py  payments.py
example_projects/fastapi_env_bug_demo/services/: __init__.py  payment_gateway.py
example_projects/fastapi_smoke_demo/: README.md  main.py  test_app.py
example_projects/python_logic_bug_demo/: README.md  calculator.py  main.py
example_projects/python_logic_bug_demo/tests/: test_calculator.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audit.rs  docker.rs  ingestion.rs  intelligence.rs  lib.rs  main.rs  patch.rs  pipeline.rs  security_scanner.rs  static_analysis.rs  workspace.rs
test_project/: calculator.py  test_calculator.py
