[package]
name = "aetherverify"
version = "0.1.0"
description = "AetherVerify Phase 1 secure desktop foundation"
authors = ["Kritish"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aetherverify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.20.1"
futures-util = "0.3.32"
neo4rs = "0.8.0"
tree-sitter = "0.26.6"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
walkdir = "2.5.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
